squashing bugs

--- a/index.css
+++ b/index.css
@@ -149,6 +149,7 @@ h1 {
     flex-direction: column;
     align-items: center;
 }
+
 h3 {
     margin-bottom: 50px;
 }
@@ -159,7 +160,7 @@ h3 {
     padding: 15px 25px;
 }
 #pay-btn {
-    width: 483px;
+    width: 420px;
     background-color: #16DB99;
     color: #FFFFFF;
     border: none;
@@ -169,7 +170,7 @@ h3 {
     font-size: 20px;
     font-weight: bold;
 }
-
+/* Message for completed order */
 .message {
     display: none;
     background-color: #ECFDF5;
